Use HTTP/1.1 instead of 1.0
HTTP/1.0 just doesn't work with NTLMAuthHandler,
or at least it is not possible to use curl + HTTP/1.0 to test ocsmanager.

--- a/mapiproxy/services/ocsmanager/ocsmanager.ini
+++ b/mapiproxy/services/ocsmanager/ocsmanager.ini
@@ -39,6 +39,7 @@ password = {SSHA}I6Hy5Wv0wuxyXvMBFWFQDVVN12_CLaX9
 use = egg:Paste#http
 host = 127.0.0.1
 port = 5000
+protocol_version = HTTP/1.1
 
 [app:main]
 use = egg:ocsmanager
