Revamped development.ini

--- a/mapiproxy/services/ocsmanager/development.ini
+++ b/mapiproxy/services/ocsmanager/development.ini
@@ -10,22 +10,57 @@ debug = true
 smtp_server = localhost
 error_email_from = paste@localhost
 
+[main]
+# Possible authentication system
+# auth = file
+#auth = ldap
+auth = single
+debug = yes
+mapistore_root = /usr/local/samba/private
+mapistore_data = /usr/local/samba/private/mapistore
+
+[auth:file]
+#file =
+
+[auth:ldap]
+host = ldap://xxx
+port = 489
+bind_dn =
+bind_pw =
+basedn =
+#filter = (cn=%s)
+#attrs = userPassword, x-isActive
+
+[auth:single]
+username = openchange
+# password is test
+password = {SSHA}I6Hy5Wv0wuxyXvMBFWFQDVVN12_CLaX9
+
 [server:main]
 use = egg:Paste#http
 host = 127.0.0.1
 port = 5000
-
-[perso:test]
-app = clear
+protocol_version = HTTP/1.1
 
 [app:main]
 use = egg:ocsmanager
 full_stack = true
 static_files = true
-
 cache_dir = %(here)s/data
 beaker.session.key = ocsmanager
 beaker.session.secret = somesecret
+app_instance_uuid = {ee533ebc-f266-49d1-ae10-d017ee6aa98c}
+NTLMAUTHHANDLER_WORKDIR = /var/cache/ntlmauthhandler
+
+
+[rpcproxy:ldap]
+host = localhost
+port = 389
+basedn = CN=Users,DC=example,DC=com
+
+[perso:test]
+app = clear
+
 
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
@@ -36,12 +71,18 @@ beaker.session.secret = somesecret
 # WARNING: *THE LINE BELOW MUST BE UNCOMMENTED ON A PRODUCTION ENVIRONMENT*
 # Debug mode will enable the interactive debugging tool, allowing ANYONE to
 # execute malicious code after an exception is raised.
-#set debug = false
+set debug = true
 
 # override OCSManager authentication scheme. Possible values for auth
 # are:
 #auth = ldap
 auth = config
+
+[auth:single]
+username = openchange
+# password is test
+password = {SSHA}I6Hy5Wv0wuxyXvMBFWFQDVVN12_CLaX9
+
 
 # Logging configuration
 [loggers]
