Add a default SAMBA_HOST to ocsmanager.ini

--- a/mapiproxy/services/ocsmanager/ocsmanager.ini
+++ b/mapiproxy/services/ocsmanager/ocsmanager.ini
@@ -50,6 +50,7 @@ beaker.session.key = ocsmanager
 beaker.session.secret = SDyKK3dKyDgW0mlpqttTMGU1f
 app_instance_uuid = {ee533ebc-f266-49d1-ae10-d017ee6aa98c}
 NTLMAUTHHANDLER_WORKDIR = /var/cache/ntlmauthhandler
+SAMBA_HOST = 127.0.0.1
 
 [rpcproxy:ldap]
 host = localhost
